{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 20,
  "lineage": "e28eec57-9f96-b18d-42cf-111986bd0398",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cloudtechbitsvpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:internet-gateway/igw-0994e059d7fa33947",
            "id": "igw-0994e059d7fa33947",
            "owner_id": "058775512105",
            "vpc_id": "vpc-09464e2788a470e04"
          },
          "dependencies": [
            "aws_vpc.cloudtechbitsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:network-acl/acl-0724ea8c2a092131a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0724ea8c2a092131a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "tcp",
                "rule_no": 101,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "owner_id": "058775512105",
            "subnet_ids": [
              "subnet-041c1d6772f778695",
              "subnet-08ba07b4512cac078",
              "subnet-0a5d03e37645eb8ee",
              "subnet-0b4a77fa3dc552e4f",
              "subnet-0c0aa8ba7fcb50753",
              "subnet-0dfa1fbccb14885b8"
            ],
            "tags": {
              "Name": "CTB Default ACL"
            },
            "vpc_id": "vpc-09464e2788a470e04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.ctb_subnet_1",
            "aws_subnet.ctb_subnet_2",
            "aws_subnet.ctb_subnet_3",
            "aws_subnet.ctb_subnet_4",
            "aws_subnet.ctb_subnet_5",
            "aws_subnet.ctb_subnet_6",
            "aws_vpc.cloudtechbitsvpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01cc66ccb023d2673",
            "owner_id": "058775512105",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0994e059d7fa33947",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CTB Default Route"
            },
            "vpc_id": "vpc-09464e2788a470e04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cloudtechbitsvpc_igw",
            "aws_vpc.cloudtechbitsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "r_public_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057c8e7eea82a4f2d",
            "route_table_id": "rtb-01cc66ccb023d2673",
            "subnet_id": "subnet-0b4a77fa3dc552e4f"
          },
          "dependencies": [
            "aws_internet_gateway.cloudtechbitsvpc_igw",
            "aws_route_table.r_public",
            "aws_subnet.ctb_subnet_1",
            "aws_vpc.cloudtechbitsvpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "r_public_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0549d051b4381c040",
            "route_table_id": "rtb-01cc66ccb023d2673",
            "subnet_id": "subnet-041c1d6772f778695"
          },
          "dependencies": [
            "aws_internet_gateway.cloudtechbitsvpc_igw",
            "aws_route_table.r_public",
            "aws_subnet.ctb_subnet_2",
            "aws_vpc.cloudtechbitsvpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "r_public_association_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0119f271aadc912d7",
            "route_table_id": "rtb-01cc66ccb023d2673",
            "subnet_id": "subnet-0c0aa8ba7fcb50753"
          },
          "dependencies": [
            "aws_internet_gateway.cloudtechbitsvpc_igw",
            "aws_route_table.r_public",
            "aws_subnet.ctb_subnet_3",
            "aws_vpc.cloudtechbitsvpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "r_public_association_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0271b5f822eafa90b",
            "route_table_id": "rtb-01cc66ccb023d2673",
            "subnet_id": "subnet-0dfa1fbccb14885b8"
          },
          "dependencies": [
            "aws_internet_gateway.cloudtechbitsvpc_igw",
            "aws_route_table.r_public",
            "aws_subnet.ctb_subnet_4",
            "aws_vpc.cloudtechbitsvpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "r_public_association_5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1a671fc3b4c528c",
            "route_table_id": "rtb-01cc66ccb023d2673",
            "subnet_id": "subnet-08ba07b4512cac078"
          },
          "dependencies": [
            "aws_internet_gateway.cloudtechbitsvpc_igw",
            "aws_route_table.r_public",
            "aws_subnet.ctb_subnet_5",
            "aws_vpc.cloudtechbitsvpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "r_public_association_6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eba864e8455aeec7",
            "route_table_id": "rtb-01cc66ccb023d2673",
            "subnet_id": "subnet-0a5d03e37645eb8ee"
          },
          "dependencies": [
            "aws_internet_gateway.cloudtechbitsvpc_igw",
            "aws_route_table.r_public",
            "aws_subnet.ctb_subnet_6",
            "aws_vpc.cloudtechbitsvpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "access_for_kiran",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:security-group/sg-083833b5f6738ff64",
            "description": "Security Group for all access from current IP for Dev / Test / Debugging",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083833b5f6738ff64",
            "ingress": [
              {
                "cidr_blocks": [
                  "98.144.22.47/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "access_for_kiran_sg",
            "name_prefix": "",
            "owner_id": "058775512105",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh_for_kiran_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09464e2788a470e04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cloudtechbitsvpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ctb_web_server_identifier_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:security-group/sg-0285b346da9d5571c",
            "description": "Security Group with no inbound rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0285b346da9d5571c",
            "ingress": [],
            "name": "ctb_web_server_identifier_sg",
            "name_prefix": "",
            "owner_id": "058775512105",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ctb_web_server_identifier_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09464e2788a470e04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cloudtechbitsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ctb_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-0b4a77fa3dc552e4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/23",
            "id": "subnet-0b4a77fa3dc552e4f",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "tags": {
              "Name": "ctb_subnet_1"
            },
            "vpc_id": "vpc-09464e2788a470e04"
          },
          "dependencies": [
            "aws_vpc.cloudtechbitsvpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ctb_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-041c1d6772f778695",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/23",
            "id": "subnet-041c1d6772f778695",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "tags": {
              "Name": "ctb_subnet_2"
            },
            "vpc_id": "vpc-09464e2788a470e04"
          },
          "dependencies": [
            "aws_vpc.cloudtechbitsvpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ctb_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-0c0aa8ba7fcb50753",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/23",
            "id": "subnet-0c0aa8ba7fcb50753",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "tags": {
              "Name": "ctb_subnet_3"
            },
            "vpc_id": "vpc-09464e2788a470e04"
          },
          "dependencies": [
            "aws_vpc.cloudtechbitsvpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ctb_subnet_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-0dfa1fbccb14885b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/23",
            "id": "subnet-0dfa1fbccb14885b8",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "tags": {
              "Name": "ctb_subnet_4"
            },
            "vpc_id": "vpc-09464e2788a470e04"
          },
          "dependencies": [
            "aws_vpc.cloudtechbitsvpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ctb_subnet_5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-08ba07b4512cac078",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.8.0/23",
            "id": "subnet-08ba07b4512cac078",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "tags": {
              "Name": "ctb_subnet_5"
            },
            "vpc_id": "vpc-09464e2788a470e04"
          },
          "dependencies": [
            "aws_vpc.cloudtechbitsvpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ctb_subnet_6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:subnet/subnet-0a5d03e37645eb8ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.10.0/23",
            "id": "subnet-0a5d03e37645eb8ee",
            "map_public_ip_on_launch": false,
            "owner_id": "058775512105",
            "tags": {
              "Name": "ctb_subnet_6"
            },
            "vpc_id": "vpc-09464e2788a470e04"
          },
          "dependencies": [
            "aws_vpc.cloudtechbitsvpc",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloudtechbitsvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058775512105:vpc/vpc-09464e2788a470e04",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cf7b696272819508",
            "default_route_table_id": "rtb-0ad84709d37488236",
            "default_security_group_id": "sg-08e538a75dfdef0fc",
            "dhcp_options_id": "dopt-c60b46be",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09464e2788a470e04",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0805b5e91da6bb5b1",
            "ipv6_cidr_block": "2600:1f18:1d9b:2b00::/56",
            "main_route_table_id": "rtb-0ad84709d37488236",
            "owner_id": "058775512105",
            "tags": {
              "Name": "Cloud Tech Bits"
            }
          }
        }
      ]
    }
  ]
}